--- a/package.json
+++ b/package.json
@@ -1,74 +1,22 @@
 {
-  "name": "pk2-angular",
+  "name": "mylead-web-prod",
   "version": "1.0.0",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "dev": "ng serve --host 10.1.1.51 --port 4001 ",
-    "build": "ng build --prod --build-optimizer = false",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/myLead/mylead-web-prod.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/myLead/mylead-web-prod/issues"
+  },
+  "homepage": "https://github.com/myLead/mylead-web-prod#readme",
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "4.3.1",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "angular2-notifications": "^0.9.7",
-    "animate.css": "^3.6.1",
-    "axios": "^0.16.2",
-    "bootstrap": "4.0.0-beta",
-    "core-js": "^2.4.1",
-    "jw-bootstrap-switch-ng2": "1.0.3",
-    "moment": "^2.20.1",
-    "ng-auto-complete": "^2.7.14",
-    "ng-pick-datetime": "^5.1.7",
-    "ng2-auto-complete": "^0.12.0",
-    "ng2-nouislider": "1.6.1",
-    "nouislider": "9.2.0",
-    "popper.js": "^1.12.3",
-    "rxjs": "^5.1.0",
-    "vanilla-masker": "^1.1.1",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@angular/cdk": "^5.2.4",
-    "@angular/cli": "^1.7.4",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "^2.6"
+    "express": "^4.16.2"
   }
 }
